# pyjacket

./: .buildinfo  VERSION.txt  genindex.html  index.html  kaspy.code-workspace  main.py  modules.html  objects.inv  py-modindex.html  pyjacket.arrtools.html  pyjacket.core.html  pyjacket.cvtools.html  pyjacket.dna.html  pyjacket.filetools.html  pyjacket.filetools.image.html  pyjacket.geometry.html  pyjacket.graphtools.html  pyjacket.html  pyjacket.ntheory.html  pyjacket.ntheory.modulo.html  pyjacket.ntheory.primes.html  pyjacket.plottools.html  pyjacket.string.html  pyproject.toml  rebuild.bat  requirements.txt  result.txt  search.html  searchindex.js  setup.py  test.py  todo.txt
_modules/: collections.html  index.html
_sources/: index.rst.txt  modules.rst.txt  pyjacket.arrtools.rst.txt  pyjacket.core.rst.txt  pyjacket.cvtools.rst.txt  pyjacket.dna.rst.txt  pyjacket.filetools.image.rst.txt  pyjacket.filetools.rst.txt  pyjacket.ntheory.modulo.rst.txt  pyjacket.ntheory.primes.rst.txt  pyjacket.ntheory.rst.txt  pyjacket.rst.txt
docs/: conf.py  index.rst  pyjacket.arrtools.rst  pyjacket.core.rst  pyjacket.cvtools.rst  pyjacket.dna.rst  pyjacket.filetools.rst  pyjacket.geometry.rst  pyjacket.graphtools.rst  pyjacket.plottools.rst  pyjacket.string.rst
kaspy/: __init__.py
pyjacket/: LICENSE  LICENSE.rst  __init__.py  requirements.txt  setup.py
unfinished/: _.py  count_using.py  digital_root.py  divisibility.py  dots_diagonal.py  factor_factorials.py  gcd_extended.py  last_digit.py  lcm.py  number_jumping.py  perfect_number.py  prime_factorization.py
(+132 files in other folders)
