[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaspy"
version = "0.0.1"
authors = [
    {name="Kasper Arfman", email="kasper.arf@gmail.com"},
]
description = "A wide mix of useful functions in science"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/Kasper-Arfman/kaspy"
"Bug Tracker" = "https://github.com/Kasper-Arfman/kaspy/issues"